# rslph

./: .gitignore  Cargo.toml  README.md  progress.md
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: askuserquestion-detection.md  empty-project-name-commit.md  sapling-commit-hash-unknown.md
.planning/debug/resolved/: tui-empty-screen-keys-frozen.md  tui-thread-collapse.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-subprocess-management/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-planning-command/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-core-build-loop/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE-EVAL.md  ARCHITECTURE.md  COMMAND_PATTERNS.md  FEATURES.md  FEATURES_v1.2.md  GSD-WORKFLOW.md  INTEGRATION-PITFALLS.md  PITFALLS.md  PORTABLERALPH.md  STACK-v1.2.md  STACK.md  STREAM_JSON.md  SUMMARY-v1.3.md  SUMMARY.md  TUI-INPUT.md  claude-cli-interactive-input.md
evals/calculator/: prompt.txt  tests.jsonl
evals/fizzbuzz/: prompt.txt  tests.jsonl
prompts/: PROMPT_build.md  PROMPT_plan.md  PROMPT_test_discovery.md
prompts/basic/: PROMPT_plan.md
prompts/gsd/: PROMPT_build.md  PROMPT_plan.md
prompts/gsd_tdd/: PROMPT_build.md  PROMPT_plan.md
scripts/: run-eval-fake-claude.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  progress.rs
src/eval/: command.rs  mod.rs  parallel.rs  projects.rs  statistics.rs  test_runner.rs
src/planning/: command.rs  mod.rs  personas.rs  stack.rs  vagueness.rs
src/prompts/: defaults.rs  loader.rs  mod.rs  modes.rs
src/subprocess/: mod.rs  output.rs  runner.rs  signals.rs  stream_json.rs
src/tui/: app.rs  conversation.rs  dashboard.rs  event.rs  keybindings.rs  mod.rs  plan_tui.rs  run.rs  terminal.rs  theme.rs  ui.rs
src/vcs/: git.rs  mod.rs  sapling.rs
tests/: fake_claude.rs
tests/e2e/: eval_command.rs  fixtures.rs  helpers.rs  main.rs  mod.rs  scenario_tests.rs  test_basic_loop.rs  test_edge_cases.rs  test_eval_integration.rs  test_interactive_planning.rs  test_rslph_integration.rs  test_token_tracking.rs  tui_tests.rs
tests/fake_claude_lib/: config.rs  mod.rs  prebuilt.rs  scenario.rs  stream_json.rs
(+213 files in other folders)
