[package]
name = "rslph"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
pulldown-cmark = "0.13"
atomicwrites = "0.4"
color-eyre = "0.6"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3"
