[package]
name = "rslph"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
pulldown-cmark = "0.13"
atomicwrites = "0.4"
color-eyre = "0.6"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
nix = { version = "0.29", features = ["signal"] }
chrono = "0.4.43"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
human_format = "1.2"
tempfile = "3"
include_dir = "0.7"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
insta = "1"
predicates = "3"

[[test]]
name = "fake_claude"
path = "tests/fake_claude.rs"
harness = false
