[package]
name = "rslph"
version = "0.1.1"
edition = "2021"
description = "CLI tool for LLM-powered autonomous task execution"
license = "MIT"
repository = "https://github.com/VladimirMakaev/rslph"
readme = "README.md"
keywords = ["cli", "llm", "automation", "claude", "ai"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".planning/*",
    ".github/*",
    "scripts/*",
]

[dependencies]
atomicwrites = "0.4"
chrono = "0.4.43"
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6.0"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
human_format = "1.2"
include_dir = "0.7"
nix = { version = "0.29", features = ["signal"] }
pulldown-cmark = "0.13"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tempfile = "3"
thiserror = "2.0"
throbber-widgets-tui = "0.10.0"
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
insta = "1"
predicates = "3"

[[test]]
name = "fake_claude"
path = "tests/fake_claude.rs"
harness = false
